--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body{
+  background-color: #112240;
+  font-family: 'Inter', Arial, sans-serif;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar-section{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.social-media-icons-white a{
+  color: darkgray;
+  font-size: 1.5rem;
+  margin-top: 30px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img{
+  width: 300px;
+  height: 400px;
+  margin: auto;
+  margin-top: 15px;
+  object-fit: cover;
+}
+
+p{
+  max-width: 50ch;
+}
+
+.experience-cards{
+  margin-top: 20px;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  
+}
+
+
+
+.experience-card{
+  margin-left:2px;
+ 
+}
+
+.huawei-pic{
+  width: 50%; /* Konteyner genişliğine uyum sağlar */
+  height: 50%; /* Konteyner yüksekliğine uyum sağlar */
+  object-fit: contain; /* Resmin tamamını gösterir */
+  object-position: top;
+}
+
+.tubitak{
+  width: 150px;
+  height: 150px;
+}
+
+.project-image{
+  width: 100px;
+  height: 100px;
+}
+
+
+.main-content{
+  flex: 1;
+}
+
+.mySwiper{
+  max-width: 576px;
+  max-height: 350px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.slider-image{
+  width: 450px;
+  height: 270px;
+}
+
+.swiper-pagination-fraction{
+  display: none;
+}
+
+.title{
+  margin-right: 130px;
+  margin-bottom: 20px;
+}
+
+.title-certificate{
+  margin-right: 60px;
+  margin-bottom: 20px;
+}
+
+.contact-me{
+  max-width: 570px;
+}
+
+.exp{
+  cursor: auto;
 }
